--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -45,7 +45,7 @@
             #6f777b
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            Not really used for ERC yet
+            Not really used for ERC yet but used in the prototype
           </td>
         </tr>
 
@@ -65,7 +65,7 @@
             #005ea5
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            ERC: see below
+            ERC link colour below used in the prototype
           </td>
         </tr>
         <tr class="app-colour-list-row">
@@ -90,7 +90,7 @@
             #2b8cc4
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            ERC: see below
+            This is what we use in the prototype
           </td>
         </tr>
         <tr class="app-colour-list-row">
@@ -102,7 +102,8 @@
               #fff / #444
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
-              <span style="color: #ffffff; text-decoration: underline; background: #444">this looks like a link - hover</span>
+              <span style="color: #ffffff; text-decoration: underline; background: #444">this looks like a link - hover</span><br>
+              not used in the prototype, not very accessible
             </td>
           </tr>
 
@@ -115,7 +116,7 @@
             #4c2c92
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            ERC : see below
+            As it's close enough to the ERC one: kept
           </td>
         </tr>
         <tr class="app-colour-list-row">
@@ -127,7 +128,8 @@
                 #551a8b
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
-              <span style="color: #551a8b; text-decoration: underline;">this looks like a visited link</span>
+              <span style="color: #551a8b; text-decoration: underline;">this looks like a visited link</span><br>
+              not used - see above
             </td>
           </tr>
 
@@ -141,7 +143,7 @@
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
             <span style="color: #0b0c0c; text-decoration: underline; background-color: #ffbf47">GDS link - focus</span><br>
-            ERC: see below
+            used in the prototype
           </td>
         </tr>
         <tr class="app-colour-list-row">
@@ -154,6 +156,7 @@
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
               <span style="background-color: #444; text-decoration: underline; color: #b9ff06">ERC link - focus/active</span><br>
+              not used in the prototype, not very accessible and not consistent with other focus visual
             </td>
           </tr>
 
@@ -195,9 +198,21 @@
             #b10e1e
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            Use for error messages - ERC uses: #B30000
+           changed to ERC colour, see below
           </td>
         </tr>
+        <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#b30000"></span>
+              <code>ERC error colour</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+              #b30000
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              Use for error messages - and border
+            </td>
+          </tr>
 
         <tr>
             <td colspan="3">
@@ -235,11 +250,11 @@
 
           <tr class="app-colour-list-row">
               <th class="app-colour-list-column app-colour-list-column--name" scope="row">
-                <span class="app-swatch " style="background-color:#ccc"></span>
+                <span class="app-swatch " style="background-color:#eee"></span>
                 <code>ERC Summary table</code>
               </th>
               <td class="app-colour-list-column app-colour-list-column--colour">
-                #ccc
+                #eee
               </td>
               <td class="app-colour-list-column app-colour-list-column--notes">
                 one every two rows
