--- a/app/views/forms/education/summary.html
+++ b/app/views/forms/education/summary.html
@@ -87,7 +87,7 @@
             Date of birth
           </dt>
           <dd class="app-check-your-answers__answer">
-              {{ data['dob-date-day'] }}/{{ data['dob-date-month'] }}/{{ data['dob-date-year'] }}
+              {{ data['dob-day'] }}/{{ data['dob-month'] }}/{{ data['dob-year'] }}
           </dd>
         </div>
       
@@ -118,7 +118,7 @@
               Select one school
           </dt>
           <dd class="app-check-your-answers__answer">
-              {{ data['denominational-or-non'] }}
+              {{ data['school'] }}
           </dd>
         </div>
 
