--- a/app/views/forms/education/child-dob.html
+++ b/app/views/forms/education/child-dob.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-
+      <form class="form" method="post">
       {% from "date-input/macro.njk" import govukDateInput %}
 
       {{ govukDateInput({
@@ -25,14 +25,30 @@
         },
         hint: {
           text: "For example, 11 08 2014"
-        }
+        },
+        items:[
+            {
+            name: 'day',
+            value: data['dob-day'],
+            classes: "govuk-input--width-2"
+            },
+            {
+            name: 'month',
+            value: data['dob-month'],
+            classes: "govuk-input--width-2"
+            },
+            {
+            name: 'year',
+            value: data['dob-year'],
+            classes: "govuk-input--width-4"
+            }
+            ]
       }) }}
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/child-gender.html"
+        "text": "Continue"
         }) }}
-
+      </form>
     </div>
 </div>
 
