--- a/app/views/forms/education/nursery.html
+++ b/app/views/forms/education/nursery.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-l">
           What is the child's current nursery?
       </h1>
-
+      <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
@@ -21,15 +21,15 @@
         },
         classes: "govuk-input--width-20",
         id: "nursery",
-        name: "nursery"
+        name: "nursery",
+        value: data['nursery']
       }) }}
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/denominational-or-non.html"
+        "text": "Continue"
         }) }}
 
-
+      </form>
     </div>
 </div>
 
