--- a/app/views/forms/education/parent-name.html
+++ b/app/views/forms/education/parent-name.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-l">
           What is your name?
       </h1>
-
+      <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
@@ -20,7 +20,8 @@
           text: "Parent or carer's first name"
         },
         id: "parent-first-name",
-        name: "parent-first-name"
+        name: "parent-first-name",
+        value: data['parent-first-name']
       }) }}
 
       {{ govukInput({
@@ -28,15 +29,15 @@
           text: "Parent or carer's last name"
         },
         id: "parent-last-name",
-        name: "parent-last-name"
+        name: "parent-last-name",
+        value: data['parent-last-name']
       }) }}
 
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/phone.html"
+        "text": "Continue"
         }) }}
-
+      </form>
     </div>
 </div>
 
