--- a/app/views/forms/education/phone.html
+++ b/app/views/forms/education/phone.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-l">
           What is your phone number?
       </h1>
-
+      <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
@@ -21,15 +21,15 @@
         },
         id: "phone",
         name: "phone",
+        value: data['phone'],
         type: "tel",
         classes: "govuk-input--width-20"
       }) }}
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/email.html"
+        "text": "Continue"
         }) }}
-
+    </form>
 
     </div>
 </div>
