--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -10,13 +10,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-
+      <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
 
       {{ govukRadios({
         classes: "govuk-radios",
         idPrefix: "sibling",
         name: "sibling",
+        value: data['sibling'],
         fieldset: {
           legend: {
             text: "Will the child have sibling(s) at the school when they start?",
@@ -40,11 +41,10 @@
       }) }}
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/sibling-name.html"
+        "text": "Continue"
         }) }}
 
-
+      </form>
     </div>
 </div>
 
