--- a/app/views/forms/education/single.html
+++ b/app/views/forms/education/single.html
@@ -10,13 +10,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-
+      <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
 
       {{ govukRadios({
         classes: "govuk-radios",
         idPrefix: "single",
         name: "single",
+        currentValue: data['single'],
         fieldset: {
           legend: {
             text: "Are you a single parent or carer?",
@@ -40,10 +41,9 @@
       }) }}
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/child-name.html"
+        "text": "Continue"
         }) }}
-
+    </form>
 
     </div>
 </div>
