correct middle name problem

--- a/app/views/forms/education/summary.html
+++ b/app/views/forms/education/summary.html
@@ -76,7 +76,7 @@
           <dd class="app-check-your-answers__answer">
               {{ data['child-first-name'] }}&nbsp;
               {% if data['child-middle-name']%}
-                {{ date ['child-middle-name'] }}
+                {{ data ['child-middle-name'] }}
               {% endif %}
               {{ data['child-last-name'] }}
           </dd>
