update colours comments

--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -156,7 +156,7 @@
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
               <span style="background-color: #444; text-decoration: underline; color: #b9ff06">ERC link - focus/active</span><br>
-              not used in the prototype, not very accessible and not consistent with other focus visual
+              not used in the prototype, not very accessible and not consistent with other focus visuals
             </td>
           </tr>
 
@@ -406,7 +406,6 @@
             #B30000
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            This should also be the colour for errors but not done yet.
           </td>
         </tr>
 
